name:                elisp-parse
version:             0.1.0.0
synopsis:            parses (parts of) emacs lisp
homepage:            https://github.com/knupfer/elisp-parse
license:             BSD3
license-file:        LICENSE
author:              Florian Knupfer
maintainer:          Florian Knupfer <fknupfer@gmail.com>
copyright:           Florian Knupfer
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Language.Elisp
  build-depends:       base >=4.8 && <4.9
                     , attoparsec
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite ElispParse
  ghc-options:         -O3 -fllvm -threaded -with-rtsopts=-N
  type:                exitcode-stdio-1.0
  build-depends:       QuickCheck
                     , base == 4.*
                     , random >= 1.1
                     , tasty >= 0.10.1.1
                     , tasty-quickcheck == 0.8.*
                     , test-invariant >= 0.1.0.0
  main-is:             Main.hs                   
  hs-source-dirs:      test
  default-language:    Haskell2010  